fixed journaling