@@ -4,6 +4,15 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.4'
 }
 
+bootRun {
+	jvmArgs(["--add-opens=java.base/java.lang=ALL-UNNAMED",
+			 "--add-opens=java.base/java.io=ALL-UNNAMED",
+			 "--add-opens=java.base/java.util=ALL-UNNAMED",
+			 "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+			 "--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED"
+	])
+}
+
 group = 'ke.co.nectar.config'
 version = '0.0.1-SNAPSHOT'
 
@@ -21,7 +30,6 @@ dependencies {
 	implementation group: 'org.bouncycastle', name: 'bcpkix-jdk18on', version:'1.77'
 	implementation group: 'joda-time', name: 'joda-time', version:'2.12.6'
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
-
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -32,9 +40,7 @@ dependencies {
 	implementation 'org.postgresql:postgresql'
 	implementation group: 'org.apache.thrift', name: 'libthrift', version: '0.18.1'
 	implementation 'jakarta.xml.bind:jakarta.xml.bind-api'
-
 	testImplementation 'junit:junit:4.13.1'
-
 	testImplementation 'org.hamcrest:hamcrest:2.2'
 	testImplementation 'org.mockito:mockito-core'
 	testImplementation 'com.jayway.jsonpath:json-path'
@@ -44,4 +50,12 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+tasks.withType(Test).configureEach {
+	jvmArgs(["--add-opens=java.base/java.lang=ALL-UNNAMED",
+			 "--add-opens=java.base/java.io=ALL-UNNAMED",
+			 "--add-opens=java.base/java.util=ALL-UNNAMED",
+			 "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+			 "--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED"])
 }
